# cuda-cpu-gpu

./: CMakeLists.txt  README.md
src/: add_arrays.h  add_arrays_cpu.cpp  add_arrays_gpu.cu  main.cpp
test/: CMakeLists.txt  test_add.cpp
